or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
License for more details.

You should have received a copy of the GNU Lesser General Public License
along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
MA 02111-1307, USA.


2001-10-08  Kevin Ryde  <kevin@swox.se>

	* configure.in (with_tags): Establish a default based on --enable-cxx.

	* aclocal.m4: Regenerate with libtool patches for sed char range to
	help Cray, LTCC quotes and +Z warnings grep to help HP-UX.

	* gmp-impl.h (doprnt_format_t, doprnt_memory_t, doprnt_reps_t,
	doprnt_final_t): Use _PROTO.

2001-10-05  Torbjorn Granlund  <tege@swox.com>

	* mpn/asm-defs.m4 (INT32, INT64): Use LABEL_SUFFIX.

	* mpn/hppa: Convert files to `.asm'.

2001-10-05  Kevin Ryde  <kevin@swox.se>

	* mpn/Makeasm.am (.S files): Revert to separate CPP and CCAS, use
	cpp-ccas, and only pass CPPFLAGS to CPP, not whole CFLAGS.
	* mpn/cpp-ccas: New file.
	* mpn/Makefile.am (EXTRA_DIST): Add it.

	* tune/common.c, tune/speed.h: Change SPEED_ROUTINE_MPN_COPY_CALL uses
	to SPEED_ROUTINE_MPN_COPY or new SPEED_ROUTINE_MPN_COPY_BYTES.  Avoids
	macro expansion problems on Cray.

	* configure.in (AC_PROG_CXXCPP): Add this, to make libtool happier.

2001-10-04  Torbjorn Granlund  <tege@swox.com>

	* mpz/rrandomb.c (gmp_rrandomb): Change bit_pos to be 0-based (was
	1-based); shift 2 (was 1) when making bit mask.  These two changes
	avoid undefined shift counts.
	(gmp_rrandomb): Avoid most calls to _gmp_rand by caching random values.

	* mpn/generic/random2.c: Changes for mirroring mpz/rrandomb.c.

2001-10-04  Kevin Ryde  <kevin@swox.se>

	* gmp.texi (Build Options): Add --enable-cxx.
	(Notes for Particular Systems): Mention pentium4 performance and SSE2.
	(Known Build Problems): Remove vax jsobgtr note, no longer needed.
	(Converting Floats): Tweak mpf_get_str description.